UpdateD app/views.py views.py

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -43,6 +43,7 @@
     <ol class="list-group mt-1">
       <li><h3 class="text-white" ><h1>Track has been succesfully added to Them 🅱️🅾️❕💲 playlist</h1></h3></li>
     </ol><hr>
+    <h1>{{results }}</h1>
     {% endfor %}
     </div>
      {% endif %}
